syntax = "proto3";
package google.protobuf;
import "timestamp.proto";

message grpcquotation {
    int32 id = 1;
    int32 symbol = 2;
    google.protobuf.Timestamp dateTime = 3;
    double doubleask = 4;
    double doublebid = 5;
    int32 intask = 6;
    int32 intbid = 7;
}